--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,7 @@
 %body
   %p#notice= notice 
   %p#class= alert
+  %ul#hmenu
+    = render :partial => 'devise/menu/registration_items'
+    = render :partial => 'devise/menu/login_items'
   = yield 
