--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,12 +1,13 @@
 = form_for @user do |f|
-  = f.label :name
-  = f.text_field :name
   -if @user.errors.any?
     #errorExplanation
       %h2= "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
       %ul
         - @user.errors.full_messages.each do |msg|
-          %li= msg
-
+          %li= msg  
+  %fieldset
+    %legend Enter User Details
+      = f.label :name
+      = f.text_field :name     
   .actions
     = f.submit 'Save'
