Working in the heirarchy of user, club, member
This many/belongs_to seems simple on the surface, but it's still not quite fitting together.

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,10 @@
-%h1 "What is your name?"
-%p= @user.name
+%h1= @user.name
+
+- if @users.clubs.length
+  %ul
+    - @user.clubs.each do |club|
+      %li= club.name
+= link_to 'Add Club', :action => "new_club", :id => @user.id
  
 = link_to 'Edit', edit_user_path(@user)
 \|
