Finally got through to the has_many.
Time to take a break, but it's working.  Not well.  Not great.  But it's working.

--- a/app/views/users/new_club.haml
+++ b/app/views/users/new_club.haml
@@ -1,6 +1,6 @@
 /TODO Implement the build club thing here
 
-= form_for :club, @club, :url => users_club_path#create_club do |f|
+= form_for :club, @club, :url => {:controller => :users, :action => 'create_club', :id => @user.id} do |f|
   %fieldset
     %legend
       Enter Club Details
