Moving down the slippery slope of rails development.
The pace has gone from snail like to ungodly fast.  Headsnapper but fun.

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,4 +1,19 @@
 %h1= @club.name
+
+%table
+  %tr
+    %th Member
+    %th Update
+  = render @club.members
+
+%h2 Add a member
+- form_for([@club, @club.members.build]) do |f|
+  /   = f.error_messages
+  #field
+    = f.label :name
+    = f.text_field :name
+  #actions
+    = f.submit
  
 = link_to 'Edit', edit_club_path(@club)
 \|
