--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,26 @@
 %head
   %title ToastSchedule
   = stylesheet_link_tag :all
+  = stylesheet_link_tag("blueprint/screen.css")
+  = stylesheet_link_tag("blueprint/print.css")
+  = stylesheet_link_tag("blueprint/ie.css")
   = javascript_include_tag :defaults
   = csrf_meta_tag
 %body
   %p#notice= notice 
   %p#class= alert
-  = yield 
+  .container
+    .span-24
+      %span.right.small
+        - if session[:user_id]
+          = link_to 'Logout', delete_session_path
+          / url_for(:controller => "sessions", :action => "logout", :method => :delete)
+        - else
+          = link_to 'Login', create_session_path 
+          / url_for(:controller => "sessions", :action => "create")
+    .span-4
+      Sidebar Left
+    .span-16
+      = yield
+    %div{:class => ["span-4 last"]}
+      Sidebar Right
