--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,7 +1,11 @@
-%h1 Welcome Page
-%h2= @time
+%h2 Toast Schedule Me
 
-- if session[:user_id]
-  = button_to 'Logout', logout_path, :method => :delete
-- else
-  = button_to 'Login', login_path
+%p 
+  Toastmasters gives you a great opportunity to change how you speak, 
+  this application will help keep you and your club on track, on time and moving forward to the next goals.
+  
+%p 
+  Start a new club scheduler here.
+
+= link_to "New Club", new_club_path
+
