Connecting users and clubs.
Still wrestling with the basic concept.  Not quite sure if this is the ultimate way to do it.

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -7,7 +7,7 @@
   = render @club.members
 
 %h2 Add a member
-- form_for([@club, @club.members.build]) do |f|
+= form_for([@club, @club.members.build]) do |f|
   /   = f.error_messages
   #field
     = f.label :name
