--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,18 +1,16 @@
-%h1= @user.name
-%h2
-  My Clubs
+%h1= @user.nick_name
+
 %ul
-= render @user.clubs
+  = render @user.clubs
 %h2 Add a club
-- form_for([@user, @user.clubs.build]) do |f|
+= form_for(@user.new_club) do |f|
   /   = f.error_messages
   #field
     = f.label :name
     = f.text_field :name
   #actions
     = f.submit
-/ = link_to 'Add Club', :action => "new_club", :id => @user.id
- 
 = link_to 'Edit', edit_user_path(@user)
+= link_to 'Destroy', @user, :confirm => 'Are you sure?', :method => :delete
 \|
 = link_to 'Back', users_path
