Users are the starting point for clubs.
If the user is already defined in a club, then they can either start a new club or get login to their home club.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,9 +3,9 @@
 %p 
   Toastmasters gives you a great opportunity to change how you speak, 
   this application will help keep you and your club on track, on time and moving forward to the next goals.
-  
 %p 
+  To get started, register as a member and then add your own club.  If your club is already using this site, contact one of your officers to get started using the site. 
+%p
   Start a new club scheduler here.
 
-= link_to "New Club", new_club_path
-
+= link_to "New Member", new_member_path
