Connected up members and clubs - at least on the first path
Yipee!  Got the first go around of connecting new members to new clubs.  There's a couple of other scenarios that I need to explore, but for now, I'm pretty happy with how this is turning out.  After all the amazing slowness, it's a little frightening to see how quickly the pieces click together.  Wow.

Scenarios I want:
New member -> new club -> new other members
Login Member -> new club -> new other members
Login member -> old club -> new other members
Login member -> old club -> old members add
Old club -> new member

Must.  Implement.  Testing.  This is WAY too arduous walking through the forms.  Not to mention error prone.  Gotta fix that.

Try again with learning RSPEC.

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -4,17 +4,22 @@
   %tr
     %th Member
     %th Update
-  = render @club.members
+  - @members.each do |member|
+    %tr
+      %th= member.name
+      %th "Fudge"
 
+/* TODO Fix this Add a member to adequately add members */
 %h2 Add a member
-= form_for([@club, @club.members.build]) do |f|
+= form_for(ub, @club.members.build]) do |f|
   /   = f.error_messages
   #field
     = f.label :name
     = f.text_field :name
   #actions
     = f.submit
- 
+
+
 = link_to 'Edit', edit_club_path(@club)
 \|
 = link_to 'Back', clubs_path
