--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,5 +1,8 @@
+/* TODO - fix the linking. Just getting /
+/  it working for now.*/
+
 %h1= @member.name
 
 = link_to 'Edit', edit_member_path(@member)
 \|
-= link_to 'Back', club_path(@club)
+= link_to 'Back', members_path
