Cross connected Member and Club with partials
Got the link code working much better and implemented partials for each.

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -4,10 +4,7 @@
   %tr
     %th Member
     %th Update
-  - @members.each do |member|
-    %tr
-      %th= member.name
-      %th "Fudge"
+  = render :partial => 'member', :collection => @members
 
 /* TODO Fix this Add a member to adequately add members */
 %h2 Add a member
