--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -2,6 +2,8 @@
 /  it working for now.*/
 
 %h1= @member.name
+%h3 Clubs
+= render :partial => 'club', :collection => @clubs
 
 = link_to 'Edit', edit_member_path(@member)
 \|
