--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,5 @@
-!!!
+!!! XML iso-8859-1
+
 %html
 %head
   %title ToastSchedule
@@ -14,7 +15,13 @@
   .container
     .span-24
       %span.right.small
-        club | schedule | member | login 
+        - if @member_signed_in 
+          Signed in as @member_signed_in.name
+        - else
+          Not a member? 
+          = link_to "Register", new_member_path
+          Or 
+          = link_to "Sign In", login_path
     .span-4
       Sidebar Left
     .span-16
