Removed user, admin cruft.  Pulled club/member flow together
Got rid of some junk and moved into the archive drawer.  Clean is good.  Albeit not 'properly', added connections and links between the users and clubs.  Got the junky create member out of the club proper, need to much more clearly define the difference between a member and a club.  Colors, anyone?

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -2,19 +2,9 @@
 
 %table
   %tr
-    %th Member
-    %th Update
+    %th Members
+    %th= link_to 'Add Member', new_member_path
   = render :partial => 'member', :collection => @members
-
-/* TODO Fix this Add a member to adequately add members */
-%h2 Add a member
-= form_for([@club, @club.member.build]) do |f|
-  /* = f.error_messages */
-  %field
-    = f.label :name
-    = f.text_field :name
-  %actions
-    = f.submit
 
 
 = link_to 'Edit', edit_club_path(@club)
