--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,8 +15,11 @@
   .container
     .span-24
       %span.right.small
-        - if @member_signed_in 
-          Signed in as @member_signed_in.name
+        - if session[:member_id]
+          = "Signed in as "
+          %b= session[:member_name]
+          = ": Not you?"
+          = link_to "Logout", logout_path
         - else
           Not a member? 
           = link_to "Register", new_member_path
