Huge night - added bunch of basic framework stuff. Roles, templates.
Lot of very fast work happened tonight and it really brought me round to the idea that you've got to know who things flow in code.

--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Toast Schedule Members
+%h1= @club.name + " Members"
 
 %table
   %tr
@@ -12,3 +12,4 @@
 %br
 
 = link_to 'New Member', new_member_path
+= link_to 'Club Details', @club
