Trying to re-implement embedded documents.
I knew that when I first got it right, I'd have to eventually go back and time and re-implement embedded docs.  Now I'm scratching my head over something I had nailed down one month ago.

Grr.

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -5,8 +5,10 @@
     %th Members
     %th= link_to 'Add Member', new_member_path
   = render :partial => 'member', :collection => @members
-
-
+  %tr
+    %th Agenda Templates
+    %th= link_to 'Add Template', new_club_template_path
+    
 = link_to 'Edit', edit_club_path(@club)
 \|
 = link_to 'Back', clubs_path
