Fixed embedded document plumbing for agenda
Finally, finally figured out how the embedded documents should work.  Now that these pieces fit neatly together, the rest of this stuff is much more along the lines of working out the details.

--- a/app/views/agendas/_form.html.haml
+++ b/app/views/agendas/_form.html.haml
@@ -1,10 +1,11 @@
-= form_for @agenda do |f|
+= form_for([@club, @agenda]) do |f|
   -if @agenda.errors.any?
     #errorExplanation
       %h2= "#{pluralize(@agenda.errors.count, "error")} prohibited this agenda from being saved:"
       %ul
         - @agenda.errors.full_messages.each do |msg|
           %li= msg
-
+  = f.label :name
+  = f.text_field :name
   .actions
     = f.submit 'Save'
