--- a/app/views/agendas/edit.html.haml
+++ b/app/views/agendas/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @agenda
+= link_to 'Show', [@club, @agenda]
 \|
-= link_to 'Back', agendas_path
+/ = link_to 'Back', agendas_path
