Added date to agenda, tried involving jQuery. Said it wasn't interested.

--- a/app/views/agendas/_form.html.haml
+++ b/app/views/agendas/_form.html.haml
@@ -7,5 +7,8 @@
           %li= msg
   = f.label :name
   = f.text_field :name
+  %div
+  = f.label :meeting_date
+  = f.text_field :meeting_date
   .actions
     = f.submit 'Save'
