--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -9,7 +9,7 @@
 %table
   %tr
     %th Agendas
-  = render :partial => 'agenda', :collection => @club.agendas
+  = render :partial => 'agenda', :collection => @agendas
 %div    
   = link_to 'New Agenda', new_club_agenda_path(@club)
   
