Fixed date problems.  Phew. Started on "show" agenda
Need to wire in the basic roles.  Next steps a little more difficult, but all the more interesting.  Pretty exciting to have come this far.

--- a/app/views/agendas/_form.html.haml
+++ b/app/views/agendas/_form.html.haml
@@ -5,10 +5,11 @@
       %ul
         - @agenda.errors.full_messages.each do |msg|
           %li= msg
-  = f.label :name
-  = f.text_field :name
-  %div
   = f.label :meeting_date
   = f.text_field :meeting_date
+  %div
+  = f.label :notes
+  %div
+  = f.text_area :notes, :cols => 20, :rows => 10
   .actions
     = f.submit 'Save'
