--- a/app/views/agendas/show.html.haml
+++ b/app/views/agendas/show.html.haml
@@ -1,4 +1,5 @@
-
-= link_to 'Edit', edit_agenda_path(@agenda)
+%p= @agenda.meeting_date_pretty
+%p= @agenda.notes
+= link_to 'Edit', edit_club_agenda_path(@club, @agenda)
 \|
-= link_to 'Back', agendas_path
+= link_to 'Back', club_path(@club)
