Started adding roles to agendas.  Need to add in place addition
Look to railscasts for details, but should be able to add roles, and then modify order (whole nuther ball of wax).

--- a/app/views/agendas/show.html.haml
+++ b/app/views/agendas/show.html.haml
@@ -1,5 +1,11 @@
 %p= @agenda.meeting_date_pretty
 %p= @agenda.notes
+
+%table
+  %tr
+    %th Roles
+  = render :partial => 'role', :collection => @roles
+
 = link_to 'Edit', edit_club_agenda_path(@club, @agenda)
 \|
 = link_to 'Back', club_path(@club)
