On the road to nested forms working.
Why is this elementary data structure so hard to represent in one single form?

--- a/app/views/agendas/show.html.haml
+++ b/app/views/agendas/show.html.haml
@@ -5,7 +5,8 @@
   %tr
     %th Roles
   = render :partial => 'role', :collection => @roles
-
+= link_to 'Destroy', [@club, @agenda], :confirm => 'Are you sure?', :method => :delete
+/ link_to "Destroy", @survey, :confirm => 'Are you sure?', :method => :delete 
 = link_to 'Edit', edit_club_agenda_path(@club, @agenda)
 \|
 = link_to 'Back', club_path(@club)
