Yay!  Fixed jQuery/javascript problem.
Boo - not sure if I can repeat it. :(.  Nonetheless, happy to see them cohabitating. Now on to the nested forms, and then we'll start looking at layouts.  Big day in this household though.

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -3,15 +3,13 @@
 %table
   %tr
     %th Members
+    %th= link_to 'Add Member', new_member_path
   = render :partial => 'member', :collection => @members
-%div
-  = link_to 'Add Member', new_member_path
 %table
   %tr
     %th Agendas
+    %th= link_to 'New Agenda', new_club_agenda_path(@club)
   = render :partial => 'agenda', :collection => @agendas
-%div    
-  = link_to 'New Agenda', new_club_agenda_path(@club)
   
 = link_to 'Edit', edit_club_path(@club)
 \|
