--- a/app/views/agendas/show.html.haml
+++ b/app/views/agendas/show.html.haml
@@ -4,6 +4,7 @@
 %table
   %tr
     %th Roles
+    / %th= link_to 'Add Role', new_club_agenda_role_path
   = render :partial => 'role', :collection => @roles
 = link_to 'Destroy', [@club, @agenda], :confirm => 'Are you sure?', :method => :delete
 / link_to "Destroy", @survey, :confirm => 'Are you sure?', :method => :delete 
