--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,12 +7,10 @@
   /   = stylesheet_link_tag("blueprint/print.css")
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
+  = javascript_include_tag :defaults
   = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/redmond/jquery-ui.css", "application"
   = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js", "application"
-  = javascript_include_tag 'prototype', 'scriptaculous', 'application' 
   = csrf_meta_tag
-  :javascript
-    var $j = jQuery.noConflict();
 %body
   %p#notice= notice 
   %p#class= alert
