Moved Agenda, Roles to 1st class docs, fixed agenda_delete
Simplified structure greatly with basic relationships.  Embedded is nice, and will probably
return to it in the future, but for now, it messes up more than helps.

--- a/app/views/agendas/show.html.haml
+++ b/app/views/agendas/show.html.haml
@@ -6,6 +6,7 @@
     %th Roles
     / %th= link_to 'Add Role', new_club_agenda_role_path
   = render :partial => 'role', :collection => @roles
+= link_to 'Add a Role', new_agenda_role_path(@agenda, @role)
 = link_to 'Destroy', [@club, @agenda], :confirm => 'Are you sure?', :method => :delete
 / link_to "Destroy", @survey, :confirm => 'Are you sure?', :method => :delete 
 = link_to 'Edit', edit_club_agenda_path(@club, @agenda)
