--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @role do |f|
+= form_for ([@agenda, @role]) do |f|
   -if @role.errors.any?
     #errorExplanation
       %h2= "#{pluralize(@role.errors.count, "error")} prohibited this role from being saved:"
@@ -6,9 +6,9 @@
         - @role.errors.full_messages.each do |msg|
           %li= msg
   %div
-    = f.label :name
+    = f.label :member_id
   %div
-    = f.text_field :name
+    = f.text_field :member_id
   %div
     = f.label :responsibility
   %div
