Role - new form added members for select box.
Need to add the types of roles next - which means creating the whole role type
structure, including authentication for modification.

--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -8,7 +8,7 @@
   %div
     = f.label :member_id
   %div
-    = f.text_field :member_id
+    = f.select(:member_id, options_from_collection_for_select(@members, :id, :name))
   %div
     = f.label :responsibility
   %div
