Got the roles back to original scheme.
Roles were never meant to be a document - just a look up for the
agenda lines.  Now we'll try having an agenda array of member_id's and
role_ids.

This will be a quick look up.  Will need to make sure it's easy to use and FAST.

--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -6,9 +6,9 @@
         - @role.errors.full_messages.each do |msg|
           %li= msg
   %div
-    = f.label :member_id
+    = f.label :name
   %div
-    = f.select(:member_id, options_from_collection_for_select(@members, :id, :name))
+    = f.text_field :name
   %div
     = f.label :responsibility
   %div
