--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,9 +1,9 @@
-%h1= @club.name + " Members"
+%h1= @club.name
+%h2 Members
 
 %table
   %tr
     %th Name
-    %th Action
     %th
   - @members.each do |member|
     %tr
