Fixed nagging member_id problem
Now it's set at logon and logon only.  Phew.

--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,5 +1,5 @@
 %h1 Editing Member 
-
+%h2= @editing_self
 = render 'form'
 
 = link_to 'Destroy', @member, :confirm => 'Are you sure?', :method => :delete
