Moved "roles" to "role_types", next rebuild roles.
Took a lot of replacing text, but it's working now.  Next step - get agenda roles working.

--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -14,6 +14,10 @@
     .email
       = f.label :email
       = f.text_field :email
+    .phone
+      = f.label :phone
+      = f.text_field :phone
+      
     - if @editing_self
       .password
         = f.label :password, "Password"
