Putting has_many back in for agendas and roles.
Still stuck on the showing a list of the related roles.  Something is wrong with the partial.

--- a/app/views/agendas/_role.html.haml
+++ b/app/views/agendas/_role.html.haml
@@ -1,3 +1,4 @@
 %tr
-  %td= @role.object_id
+  %td= @role.nil?
+  %td= link_to 'Destroy', [@agenda, @role], :confirm => 'Are you sure?', :method => :delete
   /%td= link_to agenda.meeting_date_pretty, club_agenda_path(@club, agenda) 
