Fixed role and partial problem - used wrong variable
Next: fixing the relational problems with role/agenda.

--- a/app/views/agendas/_role.html.haml
+++ b/app/views/agendas/_role.html.haml
@@ -1,4 +1,5 @@
 %tr
-  %td= @role.nil?
-  %td= link_to 'Destroy', [@agenda, @role], :confirm => 'Are you sure?', :method => :delete
+  %td= role.member_name
+  %td= role.role_type
+  %td= link_to 'Remove Role', [@agenda, role], :confirm => 'Are you sure?', :method => :delete
   /%td= link_to agenda.meeting_date_pretty, club_agenda_path(@club, agenda) 
