Working on fixing setting the drop down select box

--- a/app/views/agendas/_form.html.haml
+++ b/app/views/agendas/_form.html.haml
@@ -8,6 +8,9 @@
   = f.label :meeting_date
   = f.text_field :meeting_date
   %div
+  = f.label :theme
+  = f.text_field :theme
+  %div
   = f.label :notes
   %div
   = f.text_area :notes, :cols => 20, :rows => 10
