Half way through implementing inline editing.  Long way
to go though.

--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -2,3 +2,5 @@
   = f.label :name
   = f.text_field :name
   = f.submit 'Save'
+  = f.fields_for :members do |builder| 
+    = render "member_fields", :f => builder
