--- a/app/views/clubs/edit.html.haml
+++ b/app/views/clubs/edit.html.haml
@@ -1,7 +1,11 @@
 %h1 Editing club
 
 = render 'form'
-
+%table
+  %tr
+    %th Members
+    
+    
 = link_to 'Show', @club
 \|
 = link_to 'Back', clubs_path
