--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,15 +1,21 @@
-%h1= @club.name
-
-%table
-  %tr
-    %th Members
-    = render :partial => 'member', :collection => @members
-    %th= link_to '(+) Add Member', new_member_path
-%table
-  %tr
-    %th Agendas
-    = render :partial => 'agenda', :collection => @agendas
-    %th= link_to '(+) New Agenda', new_club_agenda_path(@club)
+%div#header_box.span-16
+  %span#club_background.span-4 Club
+  %span.span-8= @club.name
+  %span.span-2= link_to 'Edit', edit_club_path(@club)
+%hr
+%div.span-16
+  %span#member_background.span-4
+    %h3 Members 
+  %span.span-10 
+    %table
+      = render :partial => 'member', :collection => @members
+    %tr= link_to '(+) New Member', new_member_path
+%hr
+%div.span-16
+  %span#agenda_background.span-4
+    %h3 Agendas
+  %span.span-10
+    %table
+      = render :partial => 'agenda', :collection => @agendas
+    %tr= link_to '(+) New Agenda', new_club_agenda_path(@club)
   
-= link_to 'Edit', edit_club_path(@club)
-= link_to 'Back', clubs_path
