--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -1,14 +1,14 @@
 #member_background {
-  background-color: #FFF4C0;
+  background-color: #FBFFB7;
   
 }
 
 #agenda_background {
-  background-color: #85A9CC;
+  background-color: #91CC7E;
 }
 
 #club_background {
-  background-color: #959E38;
+  background-color: #DED2FF;
 }
 
 #role_background {
@@ -18,3 +18,5 @@
 #header_box {
   font-size: 200%;
 }
+
+1FADFF
