--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -3,7 +3,7 @@
   %span.span-8= @club.name
   %span.span-2= link_to 'Edit', edit_club_path(@club)
 %hr
-%div.span-16
+%div#content_box.span-16
   %span#member_background.span-4
     %h3 Members 
   %span.span-10 
@@ -12,7 +12,7 @@
       %tr
         %td= link_to '(+) New Member', new_member_path
 %hr
-%div.span-16
+%div#content_box.span-16
   %span#agenda_background.span-4
     %h3 Agendas
   %span.span-10
