--- a/app/views/agendas/show.html.haml
+++ b/app/views/agendas/show.html.haml
@@ -2,11 +2,11 @@
   %span#agenda_background.span-4 Agenda
   %span.span-8= @agenda.meeting_date_pretty
   %span.span-2= link_to 'Edit', edit_agenda_path(@agenda)
-%div.span-16
+%div#content_box.span-16
   %span.span-4
     %h3 Theme
   %span.span-8= @agenda.theme
-%div.span-16
+%div#content_box.span-16
   %span.span-4 
     %h3 Roles
   %span.span-8
@@ -16,5 +16,4 @@
         %td= link_to 'Add Role', new_agenda_role_path(@agenda, @role)
 
 = link_to 'Remove Agenda', [@club, @agenda], :confirm => 'Are you sure?', :method => :delete
-= link_to 'Edit', edit_club_agenda_path(@club, @agenda)
 = link_to 'Club', club_path(@club)
