Minor fixes, moved to MongoHQ

--- a/app/views/agendas/show.html.haml
+++ b/app/views/agendas/show.html.haml
@@ -16,4 +16,4 @@
         %td= link_to 'Add Role', new_agenda_role_path(@agenda, @role)
 
 = link_to 'Remove Agenda', [@club, @agenda], :confirm => 'Are you sure?', :method => :delete
-= link_to 'Club', club_path(@club)
+= link_to 'Back to Club', club_path(@club)
