--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -12,8 +12,8 @@
 %hr
 %div#content_box.span-16
   %span#agenda_background.span-4 
-    %h3 Agendas
-  %span.span-8
+    %h3 Roles
+  %span.span-11
     %table
       %tr
         %th Date
