--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,7 +1,6 @@
 %div#header_box.span-16
-  %span#club_background.span-4 Club
-  %span.span-8= @club.name
-  %span.span-2= link_to 'Edit', edit_club_path(@club)
+  %span.span-12= @club.name
+  %span.span-2= link_to '(edit)', edit_club_path(@club)
 %hr
 %div#content_box.span-16
   %span#member_background.span-4
