--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,9 @@
   = stylesheet_link_tag("blueprint/ie.css")
   = stylesheet_link_tag("special.css")
   = javascript_include_tag :defaults
-  = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/redmond/jquery-ui.css", "application"
-  = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js", "application"
+  = javascript_include_tag "jquery.min.js", "application"
+  = javascript_include_tag "jquery-ui.min.js", "application"
+  = stylesheet_link_tag "jquery-ui.css"
   = csrf_meta_tag
 %body
   %p#notice= notice 
