--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -11,7 +11,7 @@
       = render :partial => 'club', :collection => @clubs
 %hr
 %div#content_box.span-16
-  %span#agenda_background.span-4 
+  %span#meeting_background.span-4 
     %h3 Roles
   %span.span-11
     %table
