--- a/app/views/members/_role.html.haml
+++ b/app/views/members/_role.html.haml
@@ -1,6 +1,6 @@
 %tr
-  %td= link_to role.agenda.meeting_date_pretty,[role.agenda.club, role.agenda]
+  %td= link_to role.meeting.meeting_date_pretty,[role.meeting.club, role.meeting]
   %td= role.role_type
-  %td= link_to 'Edit', edit_agenda_role_path(role.agenda, role)
-  %td= link_to 'Remove', [@agenda, role], :confirm => 'Are you sure?', :method => :delete
-  /%td= link_to agenda.meeting_date_pretty, club_agenda_path(@club, agenda) 
+  %td= link_to 'Edit', edit_meeting_role_path(role.meeting, role)
+  %td= link_to 'Remove', [@meeting, role], :confirm => 'Are you sure?', :method => :delete
+  /%td= link_to meeting.meeting_date_pretty, club_meeting_path(@club, meeting) 
