Building out the sidebar content.
Got the meetings built - really not happy that the member/club relationship is so fragile.  There's something hinkey about that whole thing, and it's really bugging me.  Clubs -> meetings works fine - but I can't quite bring myself to be so cavalier about the club -> member.

--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,12 +1,15 @@
 .span-4
-  = render :partial => 'meeting', :collection => @club.upcoming_meetings
-  Sidebar Left
+  %h4 Upcoming 
+  = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
+.span-4
+  %h4 Members
+  = render :partial => 'shared/member', :collection => @club.members
 .span-12
   #header_box
     %span#meeting_background.span-12 Meeting
   #content_box.span-16
     %span.span-4
-      %h3 Date
+      %h3 When
     %span.span-8= @meeting.meeting_date_pretty
   #content_box.span-16
     %span.span-4
