--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -1,14 +1,14 @@
 #member_background {
-  background-color: #FBFFB7;
+  background-color: #0B79D9;
   
 }
 
 #meeting_background {
-  background-color: #91CC7E;
+  background-color: #F2E641;
 }
 
 #club_background {
-  background-color: #DED2FF;
+  background-color: #5990D9;
 }
 
 #role_background {
