--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
   = stylesheet_link_tag("special.css")
-  / = javascript_include_tag :defaults
+  = javascript_include_tag :defaults
   = javascript_include_tag "jquery.min.js", "application"
   = javascript_include_tag "jquery-ui.min.js", "application"
   = stylesheet_link_tag "jquery-ui.css"
